# IronAgent

./: CMakeLists.txt  LICENSE  README.md  requirements.txt  setup.py
benchmarks/: bench_main.cpp  bench_vs_langchain.py  hot_loop.py
python/coreagent/: __init__.py  agent.py  cli.py  llm.py  mcp_client.py  mcp_filesystem_server.py  shared_memory.py  tools.py
src/bindings/: CMakeLists.txt  pybind_main.cpp
src/c_core/: CMakeLists.txt
src/c_core/executor/: executor.c  executor.h
src/c_core/memory/: allocator.c  allocator.h
src/c_core/threading/: thread_pool.c  thread_pool.h
src/cpp_engine/: CMakeLists.txt
src/cpp_engine/agent/: Agent.cpp  Agent.hpp  AgentState.hpp
src/cpp_engine/core/: Arena.hpp  Executor.hpp  ThreadPool.hpp
src/cpp_engine/memory/: ContextBuffer.hpp
src/cpp_engine/tools/: ToolRegistry.hpp
tests/: CMakeLists.txt
tests/c_tests/: test_c_core.c
tests/cpp_tests/: test_cpp_engine.cpp
tests/python_tests/: test_agent.py
